# fmprog

./: CMakeLists.txt  README.md
examples/: Marimba.opni
sources/: fmprog.cc  fmprog.h  instrumenteditor.cc  instrumenteditor.h  instrumenteditor.ui  mainwindow.cc  mainwindow.h  mainwindow.ui  operatoreditor.cc  operatoreditor.h  operatoreditor.ui
sources/ai/: ai.cc  ai.h  algorithm.cc  algorithm.h  algorithm_data.h  evaluation.cc  evaluation.h  qtmeta.cc  qtmeta.h
sources/file-formats/: common.cpp  common.h  ffmt_base.h  ffmt_enums.h  format_wohlstand_opn2.cpp
sources/instrument/: bank.cpp  bank.h  metaparameter.h
sources/synth/: tinysynth.cpp  tinysynth.h
sources/utility/: aubio++.h  music.cc  music.h
tests/: eval.cc
